**Enhance Code Readability and Maintainability**
- Removed redundant import statements across multiple classes for a cleaner structure.
- Applied consistent formatting to method parameters and Exception handlers for better readability.
- Added `@SuppressWarnings("checkstyle:MagicNumber")` in `OrderController` for annotation usage clarity.
- Updated final variables in `AuthController` to adhere to clean coding standards.
- Enhanced validation handling in `ValidationExceptionHandler`, tailoring error responses to Bearer token validation failures.
- Refactored `AuthServiceTest` to improve clarity and ensure assertions align with the latest changes to authentication flow.
- Adjusted test configurations with proper mocks (`AuthSupportService`) for modularized service validation.

Refined code readability, optimized imports, and standardized formatting to improve maintainability and readability across the project.